--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,8 @@
                 </table>
             </div>
             <div>
-                <input type="image" id="image" name="image" src="./img/default.png" />
+                <img id="image" name="image" src="./img/default.png" alt="Imagem" style="width:auto;">
+                <!-- <input type="image" id="image" name="image" src="./img/default.png" /> -->
             </div>
         </main>
         <footer>
