Changed src by innerHtml

--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,8 @@
                     <tbody id="tbody" name="tbody"></tbody>
                 </table>
             </div>
-            <div>
-                <img id="image" name="image" src="./img/default.png" alt="Imagem" style="width:auto;">
+            <div id="image" name="image">
+                <img src="./img/default.png" alt="Default Image" />
                 <!-- <input type="image" id="image" name="image" src="./img/default.png" /> -->
             </div>
         </main>
